--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ android {
     compileSdkVersion 28
     defaultConfig {
         applicationId "com.burcutopcu.numbers"
-        minSdkVersion 15
+        minSdkVersion 16
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
@@ -75,6 +75,9 @@ dependencies {
 
     //Snackbar
     implementation 'com.android.support:design:28.0.0'
+
+    //DotsIndicator
+    implementation 'com.tbuonomo.andrui:viewpagerdotsindicator:2.0.3'
 
     //For Test
     testImplementation 'junit:junit:4.12'
